3631.	[bug]		Remove spurious warning about missing signatures when
			qtype is SIG. [RT #34600]

3630.	[bug]		Ensure correct ID computation for MD5 keys. [RT #33033]

3629.	[func]		Allow the printing of cryptographic fields in DNSSEC
			records by dig to be suppressed (dig +nocrypto).
			[RT #34534]

3628.	[func]		Report DNSKEY key id's when dumping the cache.
			[RT #34533]

3627.	[bug]		RPZ changes were not effective on slaves. [RT #34450]

3626.	[func]		dig: NSID output now easier to read. [RT #21160]

3625.	[bug]		Don't send notify messages to machines outside of the
			test setup.

3624.	[bug]		Look for 'json_object_new_int64' when looking for a
			the json library. [RT #34449]

3623.	[placeholder]

3622.	[tuning]	Eliminate an unnecessary lock when incrementing
			cache statistics. [RT #34339]

3621.	[security]	Incorrect bounds checking on private type 'keydata'
			can lead to a remotely triggerable REQUIRE failure
			(CVE-2013-4854). [RT #34238]

3620.	[func]		Added "rpz-client-ip" policy triggers, enabling
			RPZ responses to be configured on the basis of
			the client IP address; this can be used, for
			example, to blacklist misbehaving recursive
			or stub resolvers. [RT #33605]

3619.	[bug]		Fixed a bug in RPZ with "recursive-only no;"
			[RT #33776]

3618.	[func]		"rndc reload" now checks modification times of
			include files as well as master files to determine
			whether to skip reloading a zone. [RT #33936]

3617.	[bug]		Named was failing to answer queries during
			"rndc reload" [RT #34098]

3616.	[bug]		Change #3613 was incomplete. [RT #34177]

3615.	[cleanup]	"configure" now finishes by printing a summary
			of optional BIND features and whether they are
			active or inactive. ("configure --enable-full-report"
			increases the verbosity of the summary.) [RT #31777]

3614.	[port]		Check for <linux/types.h>. [RT #34162]

3613.	[bug]		named could crash when deleting inline-signing
			zones with "rndc delzone". [RT #34066]
