@@ -33,6 +33,7 @@ options {
 	notify yes;
 	dnssec-enable yes;
 	dnssec-validation yes;
+	session-keyfile "session.key";
 };
 
 key rndc_key {
@@ -260,6 +261,13 @@ zone "inline.example" {
         file "inline.example.db";
         inline-signing yes;
         auto-dnssec maintain;
+};
+
+zone "publish-inactive.example" {
+	type master;
+	file "publish-inactive.example.db";
+	auto-dnssec maintain;
+	update-policy local;
 };
 
 include "trusted.conf";
